[package]
name = "ab"
author = ["Abdelkader Madoui <abdelkadermadoui@protonmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
futures-util = { version = "0.3.25", features = ["sink"] }
rseip = { path = "../eip-rs" }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
